--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>inventory_service</module>
 		<module>discovery_server</module>
 		<module>api-gateway</module>
+		<module>notification_service</module>
 	</modules>
 
 	<dependencyManagement>
